--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,15 +13,18 @@ const { title } = Astro.props;
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
 		<title>{title}</title>
 	</head>
-	<body>
+	<body class="font-opensans">
 		<slot />
 	</body>
 </html>
 <style is:global>
-  input::-webkit-inner-spin-button, 
-  input::-webkit-outer-spin-button { 
+  input[type='number']::-webkit-inner-spin-button, 
+  input[type='number']::-webkit-outer-spin-button { 
     -webkit-appearance: none; 
     margin: 0; 
   }
