add responsive design

--- a/src/pages/bitacoras.astro
+++ b/src/pages/bitacoras.astro
@@ -6,7 +6,7 @@ import { BitacorasList } from '../components/BitacorasList';
 
 <Layout title="Welcome to Astro.">
 	<Nav client:load />
-  <main class='flex max-w-screen-xl mx-auto py-10'>
+  <main class='flex flex-col md:flex-row md:max-w-screen-xl mx-auto w-11/12'>
     <BitacorasList client:load />
   </main>
 </Layout>
